# rk-app

./: README.md
aiserver/src/: ai_feature_retriver.cpp  ai_uvc_graph.cpp
aiserver/src/utils/shmc/: shm_control_uvc.cpp
demo/: CMakeLists.txt
demo/image_process/: image_process.cc  n1-1808-rockx-drmdisp.sh
demo/image_process/resource/: face_attribute.desktop
demo/npu_uvc_connection/: CMakeLists.txt  npu_pp_output.cc  npu_pp_output.h  npu_uvc_shared.h  rockx_draw.cc  rockx_draw.h  ssd.h
demo/npu_uvc_connection/device/: npu_uvc_device.cc  npu_uvc_device.sh
demo/npu_uvc_connection/host/: npu_uvc_host.cc  npu_uvc_host.sh
qfm/: mimeapps.list  qfm.pro  qfmwindow.cpp
qplayer/: main.cpp  qplayer.cpp
qsetting/: mainwindow.cpp  qsetting.pro  qtbt.cpp  qtinputdialog.cpp  qtinputdialog.h  qtwifi.cpp  qtwifi.h
